--- a/style.css
+++ b/style.css
@@ -310,7 +310,49 @@ ul {
   text-align: center;
 }
 
-/* _________________________________________________________________________________ */
+/* ______________________________________________________________________________ */
+/* Responsividade */
+
+@media screen and (max-width: 800px) {
+
+  /* Header */
+  nav ul {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    background: #333;
+    width: 100%;
+    overflow: hidden;
+    transition: max-height 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin-right: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  nav ul li a{
+    color: #fff;
+  }
+  .menu-icon {
+    display: block;
+    cursor: pointer;
+  }
+
+}
+
+@media screen and (max-width: 600px) {
+  /* Geral */
+  .row {
+    text-align: center;
+  }
+  .col-2, .col-3, .col-4 {
+    flex-basis: 100%;
+  }
+
+}
+
+/* ___________________________________________________________________ */
 /* Todos os produtos (Página Produtos) */
 
 .row-2 {
@@ -418,49 +460,6 @@ input:focus {
   }
 }
 
-/* ______________________________________________________________________________ */
-/* Responsividade */
-
-@media screen and (max-width: 800px) {
-
-  /* Header */
-  nav ul {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    background: #333;
-    width: 100%;
-    overflow: hidden;
-    transition: max-height 0.5s;
-  }
-  nav ul li {
-    display: block;
-    margin-right: 50px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  nav ul li a{
-    color: #fff;
-  }
-  .menu-icon {
-    display: block;
-    cursor: pointer;
-  }
-
-}
-
-@media screen and (max-width: 600px) {
-  /* Geral */
-  .row {
-    text-align: center;
-  }
-  .col-2, .col-3, .col-4 {
-    flex-basis: 100%;
-  }
-  
-
-}
-
 /* ____________________________________________________________________ */
 /* Pagamento do produto detalhado (Página de pagamento) */
 
@@ -551,4 +550,142 @@ th:last-child {
   .cart-info p {
   display: none;
 }
+}
+
+/* _______________________________________________________________ */
+/* Sobre (Página Sobre) */
+
+.fala {
+  margin: 0;
+  padding: 0;
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.somos {
+  color: #ff523b;
+}
+
+.sobre {
+  color: #666;
+  line-height: 1.5;
+}
+
+/* ______________________________________________________ */
+/* Equipe de desenvolvimento (Página Sobre) */
+
+.container-equipe {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.equipe-h2 {
+  border-top: 1px solid #ff523b;
+  padding-top: 15px;
+  text-align: center;
+  color: #ff523b;
+}
+
+/* Estilos da seção "Equipe" */
+.equipe {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.membro {
+  width: 200px;
+  text-align: center;
+  margin: 10px;
+}
+
+.membro img {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid #333;
+}
+
+.membro h3 {
+  margin-top: 10px;
+}
+
+.membro p {
+  font-size: 14px;
+}
+
+/* ____________________________________________________ */
+/* Login (Página Login)*/
+
+.account-page {
+  padding: 50px 0;
+  background: radial-gradient(#fff,#ffd6d6);
+}
+.form-container {
+  background: #fff;
+  width: 300px;
+  height: 400px;
+  position: relative;
+  text-align: center;
+  padding: 20px 0;
+  margin: auto;
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+.form-container span {
+  font-weight: bold;
+  padding: 0 10px;
+  color: #555;
+  cursor: pointer;
+  width: 100px;
+  display: inline-block;
+}
+.form-btn {
+  display: inline-block;
+}
+.form-container form {
+  max-width: 300px;
+  padding: 0 20px;
+  position: absolute;
+  top: 130px;
+  transition: transform 1s;
+}
+form input {
+  width: 100%;
+  height: 30px;
+  margin: 10px 0;
+  padding: 0 10px;
+  border: 1px solid #ccc;
+}
+form .btn {
+  width: 100%;
+  border: none;
+  cursor: pointer;
+  margin: 10px 0;
+}
+form .btn:focus {
+  outline: none;
+}
+#LoginForm {
+  left: -300px;
+}
+#RegForm {
+  left: 0;
+}
+form a {
+  font-size: 12px;
+}
+#Indicator {
+  width: 100px;
+  border: none;
+  background: #ff523b;
+  height: 3px;
+  margin-top: 8px;
+  transform: translateX(100px);
+  transition: transform 1s;
 }
